refactor: replace email verification system with auth token management for email verification and password reset

--- a/src/modules/emails/templates/reset-password.ejs
+++ b/src/modules/emails/templates/reset-password.ejs
@@ -11,11 +11,9 @@
       "
     >
       <div style="text-align: center; margin-bottom: 30px">
-        <h1 style="color: #1a73e8; margin-bottom: 20px">
-          Verify Your Email Address
-        </h1>
+        <h1 style="color: #1a73e8; margin-bottom: 20px">Reset Your Password</h1>
         <p style="font-size: 18px; color: #5f6368">
-          One last step to complete your registration
+          Follow the instructions to reset your password
         </p>
       </div>
 
@@ -31,16 +29,15 @@
           Hi <%= locals.username %>,
         </p>
         <p style="font-size: 16px; color: #3c4043; line-height: 1.6">
-          Thanks for registering for GDrive Clone. To complete your registration
-          and start using our service, please verify your email address by
-          clicking the button below.
+          We received a request to reset your password for your GDrive Clone
+          account. Click the button below to reset it. If you didn't make this
+          request, you can safely ignore this email.
         </p>
       </div>
 
       <div style="text-align: center; margin: 40px 0">
         <a
-          href="<%= locals.verifyLink %>"
-          target="_blank"
+          href="<%= locals.resetLink %>"
           style="
             background-color: #1a73e8;
             color: white;
@@ -50,7 +47,7 @@
             font-weight: bold;
           "
         >
-          Verify Email Address
+          Reset Password
         </a>
       </div>
 
@@ -67,10 +64,14 @@
           browser:
         </p>
         <p style="word-break: break-all; color: #1a73e8">
-          <%= locals.verifyLink %>
+          <%= locals.resetLink %>
         </p>
         <p style="margin-top: 20px">
-          This verification link will expire in 24 hours.
+          This password reset link will expire in 1 hour for security reasons.
+        </p>
+        <p style="margin-top: 20px; color: #d93025">
+          If you didn't request this password reset, please ignore this email or
+          contact support if you have concerns.
         </p>
       </div>
     </main>
